<resources>
    <string name="app_name">Contact Export</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty_message"> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_call_btn">Call</string>
    <string name="search_menu_title">Search Contacts</string>
    <string name="contact_export_csv">Export To CSV</string>
    <string name="contact_export_settings">My Exports</string>
    <string name="contact_export_help">Help</string>
    <string name="contact_export_info">Info</string>
    <string name="contact_export_excel">Export To Excel</string>
    <string name="contact_export_vcf">Export To VCF</string>
    <string name="contact_export_xml">Export To XML</string>
    <string name="contact_export_json">Export To JSON</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="dismiss_string">Dismiss</string>
    <string name="info_header">App Info</string>
    <string name="info_body">ContactExport Version 1.0.0\n\nWebaholics Inc. © 2018 and Beyond</string>
    <string name="selected_count">%1s selected</string>
    <string name="placeholder">Placeholder View</string>
    <string name="export_float_button_tooltip">Click for export options</string>

    <string name="JSON">application/json</string>
    <string name="XML">application/xml</string>
    <string name="CSV">text/csv</string>
    <string name="XL">application/vnd.ms-excel</string>

</resources>
